<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"
?>

<package format="3">
  <name>smart_turtle_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for launching Smart Turtle nodes.</description>

  <maintainer email="abouzeid@todo.todo">abouzeid</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>smart_turtle_pkg</exec_depend>
  <exec_depend>smart_turtle_interface</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>